--- a/app/src/main/res/layout/activity_consultas_agendadas.xml
+++ b/app/src/main/res/layout/activity_consultas_agendadas.xml
@@ -4,7 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".view.ConsultasAgendadasActivity">
+
+    <TextView
+        android:id="@+id/textViewAppName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Agenda Médica On"
+        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:paddingBottom="16dp"
+        style="@style/RalewayText" />
+
+    <TextView
+        android:id="@+id/textViewWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seus Agendamentos"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:paddingBottom="16dp"
+        style="@style/RalewayText" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewConsultas"
