--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,105 +9,209 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nome Completo"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
+
         <EditText
             android:id="@+id/editTextNomeCompleto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome Completo"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CPF"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextCpf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="CPF"
-            android:inputType="number" />
+            android:inputType="number"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Celular"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextCelular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Celular"
-            android:inputType="phone" />
+            android:inputType="phone"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gênero"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextGenero"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Gênero"
-            android:inputType="text" />
+            android:inputType="text"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Data de Nascimento"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextDataNascimento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Data de Nascimento"
-            android:inputType="date" />
+            android:inputType="date"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CEP"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextCep"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="CEP"
-            android:inputType="number" />
+            android:inputType="number"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rua"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextRua"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Rua"
-            android:inputType="text" />
+            android:inputType="text"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Número"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextNumero"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Número"
-            android:inputType="number" />
+            android:inputType="number"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bairro"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextBairro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Bairro"
-            android:inputType="text" />
+            android:inputType="text"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cidade"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextCidade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Cidade"
-            android:inputType="text" />
+            android:inputType="text"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Complemento"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextComplemento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Complemento"
-            android:inputType="text" />
+            android:inputType="text"
+            style="@style/RalewayText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Senha"
+            style="@style/RalewayText"
+            android:layout_marginTop="8dp"/>
 
         <EditText
             android:id="@+id/editTextSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Senha"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            style="@style/RalewayText"/>
 
         <Button
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Registrar" />
-
-
-
-
+            android:text="Registrar"
+            android:padding="16dp"
+            android:backgroundTint="#1977cc"
+            android:textColor="#FFFFFF"
+            style="@style/RalewayText"/>
     </LinearLayout>
 </ScrollView>
